--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "concurrently": "^9.2.0",
     "cross-env": "^7.0.3",
     "esbuild": "^0.25.0",
-    "eslint": "^9.24.0",
+    "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-license-header": "^0.8.0",
@@ -78,5 +78,8 @@
     "typescript-eslint": "^8.30.1",
     "vitest": "^3.2.4",
     "yargs": "^17.7.2"
+  },
+  "dependencies": {
+    "jsdom": "^26.1.0"
   }
 }
