--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Corrigir package.json do web-server
         run: |
-          sed -i /test:/a   build: echo \No build required\, packages/web-server/package.json
-          sed -i s/1/1,/ packages/web-server/package.json
+          sed -i /"test":/a   "build": "echo \"No build required\"", packages/web-server/package.json
+          sed -i s/1"/1",/ packages/web-server/package.json
 
       - name: Executar Preflight (Build, Test, Lint)
         run: npm run preflight
