--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -2,14 +2,14 @@ name: Reconstrução do Projeto (Debian)
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     container:
       image: debian:bookworm-slim
 
@@ -25,8 +25,8 @@ jobs:
       - name: Configurar Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22.x"
-          cache: "npm"
+          node-version: '22.x'
+          cache: 'npm'
 
       - name: Corrigir package.json do web-server
         run: |
